--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -648,3 +648,4 @@ Advanced,Advanced
             Processes the indexing queue if enabled. This allows to run jobs in the indexing queues.
         "
 "Search for other ...","Search for other ..."
+"Show more products","Show more products"
