Add more strings to i18n csv

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -649,3 +649,5 @@ Advanced,Advanced
         "
 "Search for other ...","Search for other ..."
 "Show more products","Show more products"
+"As low as","As low as"
+"Rating","Rating"
